# hyperface-data-paper

./: .gitignore  .gitmodules  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.datalad/: config
.github/workflows/: ci.yml
config/: qa-config.yaml
docs/: _config.yml  _toc.yml  index.md
notebooks/: 2020-03-19_plot-motion-parameters.ipynb  2020-04-04_plot-tsnr-group.ipynb  2020-04-19_compute-isc.ipynb  2020-04-20_plot-isc.ipynb  2020-06-08_make-event-files.ipynb  2020-07-07_compute-outliers-and-median-motion.ipynb
scripts/: README.md  qa-generate-html-reports-motion.py  qa-generate-html-reports-tsnr.py  qa-plot-motion.py  qa-plot-tsnr.py  qa-save-tsnr-volume.py
scripts/examples/: compute-tsnr-volume.py
scripts/presentation/: README.md  config.json  dry_run_experiment.sh  hyperface.py  make_runorder.py  run_experiment.py
scripts/presentation/cfg/: original_order_runs.json  runorder.tsv  sub-sid000005_order_runs.json  sub-sid000007_order_runs.json  sub-sid000009_order_runs.json  sub-sid000010_order_runs.json  sub-sid000013_order_runs.json  sub-sid000020_order_runs.json  sub-sid000021_order_runs.json  sub-sid000024_order_runs.json  sub-sid000029_order_runs.json  sub-sid000034_order_runs.json  sub-sid000052_order_runs.json  sub-sid000114_order_runs.json  sub-sid000120_order_runs.json  sub-sid000134_order_runs.json  sub-sid000142_order_runs.json  sub-sid000278_order_runs.json  sub-sid000416_order_runs.json  sub-sid000499_order_runs.json  sub-sid000522_order_runs.json  sub-sid000535_order_runs.json  sub-sid000560_order_runs.json  sub-test_order_runs.json
scripts/presentation/tests/: test_hyperface.py  test_make_runorder.py
scripts/qa/: README.md  print-motion-summary.py  print-tsnr-summary.py  qa-generate-html-reports-motion.py  qa-generate-html-reports-tsnr.py  qa-plot-accuracy.py  qa-plot-isc.py  qa-plot-motion.py  qa-plot-participant-datasets.py  qa-plot-tsnr.py  qa-print-participant-demographics.py  qa-save-isc.py  qa-save-tsnr-surface.py  qa-save-tsnr-volume.py
scripts/qa/stimuli/: plot-behavioral-ratings.py
scripts/quality-assurance/: compute-tsnr-volume.py  plot-tsnr-fsaverage.py
scripts/quality-assurance-example/: compute-isc-fsaverage.py  compute-tsnr-fsaverage.py  plot-isc-fsaverage.py
scripts/stimuli/: .gitignore  README.md  build_fingerprints.py  generate_stimuli.py  report_missing_per_run.py  stim_fingerprint.py  stimulus_fingerprints.tsv  stimulus_source_videos.tsv  stimulus_sources.tsv  verify_stimuli.py
src/hyperface/: __init__.py  io.py  isc.py  utils.py  viz.py
src/hyperface/assets/: __init__.py  qa_config.yaml  visualmemory_run_order.yaml
src/hyperface/qa/: __init__.py  bids.py  config.py  motion.py  plotting.py  tsnr.py
src/hyperface/templates/: motion_report.html  tsnr_report.html
tests/: test_motion_qa.py  test_run_order.py
workflow/: README.md  Snakefile
workflow/config/: config.yaml
