[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperface"
version = "0.1.0"
description = "Analysis code for the Hyperface fMRI dataset"
authors = [
    {name = "Matteo Visconti di Oleggio Castello", email = "mvdoc@berkeley.edu"},
    {name = "Guo Jiahui", email = "jiahui.guo@utdallas.edu"},
    {name = "Ma Feilong", email = "feilong.ma@dartmouth.edu"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.18.0",
    "scipy>=1.4.0",
    "pandas>=1.0.0",
    "matplotlib>=3.1.0",
    "seaborn>=0.10.0",
    "nibabel>=3.0.0",
    "nilearn>=0.6.0",
    "scikit-learn>=0.22.0",
    "joblib>=1.0.0",
    "tqdm>=4.67.1",
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "pybids>=0.16.0",
    "pycortex>=1.0.0",
    "datalad>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.12.12",
]

[project.urls]
Homepage = "https://github.com/mvdoc/hyperface-data-paper"
Repository = "https://github.com/mvdoc/hyperface-data-paper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
hyperface = ["assets/*.yaml", "templates/*.html"]

[tool.ruff]
line-length = 88
target-version = "py310"
# Exclude archival code that should not be modified
exclude = [
    "scripts/presentation/**",  # Legacy Python 2 stimulus presentation code
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "N806", # Variable should be lowercase (allow uppercase for mathematical matrices)
]

[tool.ruff.lint.isort]
known-first-party = ["hyperface"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "off"
exclude = [
    "data/**",
    "private/**",
    "workdir/**",
    ".datalad/**",
    ".claude/**",
    ".*cache/**",
    "**/__pycache__",
]
